2009-04-28  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch finalizes a decent version of PoCC. Beta mode is on!
	
	* config/devel/configure.cfg,
	* config/base/configure.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg,
	* config/irregular/configure.cfg: Workaround for polylib
	configuration bug.

	* install.sh,
	* driver/src/options.c,
	* bin/pocc-make,
	* bin/pocc-util.in,
	* bin/pocc-checkout,
	* generators/scripts/inscop,
	* generators/scripts/timercode: Fixes.

	* doc/pocc.texi: Improve documentation.
	
2009-04-28  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	
	* config/configure.cfg,
	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg,
	* config/irregular/configure.cfg,
	* config/irregular/driver.cfg: New. Configuration files for
	different modes.

	* bin/pocc-make,
	* bin/pocc-util.in,
	* bin/pocc-checkout: Update the scripts.

2009-04-28  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc/options.c,
	* driver/pocc/driver-codegen.c,
	* driver/src/pocc.c: Minor updates, remove bugs.

	* bin/pocc-checkout,
	* generators/scripts/compile,
	* generators/scripts/omp,
	* generators/scripts/timercode: Fix the scripts.

	* gemver.c: Remove timer code, now automatically inserted.

2009-04-27  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* doc/Makefile.am,
	* doc/doxygen.cfg,
	* doc/pocc.texi: New. Start documentation skeleton.
	* Makefile.am,
	* configure.ac: Update accordingly.

	* driver/pocc-utils/Makefile.am,
	* driver/src/Makefile.am,
	* config/configure.cfg,
	* bin/pocc-util.in,
	* install.sh: Minor updates.

2009-04-27  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* pocc/driver: Rename to...
	* driver: ... this. According modifications where in previous patch.

2009-04-27  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>