@@ -5,7 +5,7 @@
 ## Contact: <louis-noel.pouchet@inria.fr>
 ##
 ## Started on  Tue Apr 14 17:43:47 2009 Louis-Noel Pouchet
-## Last update Tue Apr 28 16:37:48 2009 Louis-Noel Pouchet
+## Last update Tue Apr 28 19:44:19 2009 Louis-Noel Pouchet
 ##
 
 use Switch;
@@ -33,13 +33,14 @@ sub parse_args
 {
     my $i;
     my @args = @_;
-    if ($#args eq 0) { 
-	print_help; exit 1; 
+    if ($#args == -1) {
+	print_help;
+	exit 1;
     }
     for($i = 0; $i <= $#args; $i++) {
 	switch ($args[$i]) {
 	    case "help" { print_help; exit 1; }
-	    case "alternate" { 
+	    case "alternate" {
 		die "Missing argument\n" if ($i eq $#args);
 		alternate($BASEDIR, $args[$i + 1]);
 		checkout($BASEDIR, "all");
